# confidential-balances-exploration

./: Cargo.toml  README.md
docs/: FAQ.md
docs/guides/: product-guide.md  wallet-integration.md
docs/reference/: cryptography.md  rust-deps.md  token-extensions.md
examples/: get_balances.rs  run_transfer.rs
examples/js/: encrypt-decrypt.ts  generate-proofs.ts  keypair-derivation.ts  verify-on-chain.ts
examples/rust/: apply_pending.rs  deposit.rs  setup_token_account.rs  transfer.rs  withdraw.rs
src/: apply_pending.rs  configure.rs  deposit.rs  transfer.rs  types.rs  withdraw.rs
tests/: integration_test.rs
