[package]
name = "conf-balances-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana Core
solana-sdk = "3.0.0"
solana-client = "3.1.6"
solana-zk-sdk = "5.0.0"
solana-system-program = "3.1.6"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }

# SPL Token-2022
spl-token-2022 = { version = "10.0.0", features = ["zk-ops"] }
spl-token-client = "0.18.0"
spl-associated-token-account = "8.0.0"

# Confidential Transfer Proof Generation
spl-token-confidential-transfer-proof-generation = "0.5.1"
spl-token-confidential-transfer-proof-extraction = "0.5.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Commitment config
solana-commitment-config = "3.1.0"

# Utilities
hex = "0.4"
serde_json = "1.0"

[dev-dependencies]
# Test utilities
# solana-test-validator = "3.1.6"  # Temporarily disabled due to version conflicts
env_logger = "0.11"
serde_json = "1.0"
solana-commitment-config = "3.1.0"
